--- a/JAMBUX1.html
+++ b/JAMBUX1.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <p>😸 Haz click aquí para ver más fotos de <a href="#">gatetes</a>.</p>
+      <p>😸 Haz clck aquí para ver más fotos de <a href="#">gatetes</a>.</p>
       <img
         src="letra x.jpg" width="20%" height="30%"
         alt="Un gato naranja tumbado"
